スケルトンアーカイブ取得をボタン押下ではなく別スレッドで非同期に行なうようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1536 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -17,7 +17,6 @@ NewProjectWizardThirdPage.9=User name
 NewProjectWizardThirdPage.10=Password
 NewProjectWizardSecondPage.1=Project skeleton
 NewProjectWizardSecondPage.2=Specify project skeleton.
-NewProjectWizardSecondPage.3=Push "Get skeleton archive" button in order to get skeleton archive.
 NewProjectWizardSecondPage.4=Project skeleton
 NewProjectWizardSecondPage.5=Available skeletons
 NewProjectWizardSecondPage.6=Specify skeleton's ID
@@ -43,10 +42,10 @@ NewProjectWizardFirstPage.8=Use project name as artifact ID
 NewProjectWizardFirstPage.9=Version
 NewProjectWizardSecondPage.10=Use the latest version
 NewProjectWizardSecondPage.11=Get skeleton archive
-NewProjectWizardSecondPage.12=Skeleton has not been found. Please change condition and retry.
 NewProjectWizardFourthPage.10=Generate Dao and entity classes for S2Dao
 NewProjectWizardFourthPage.11=Generate Dxo classes for S2Dxo
 NewProjectWizardFourthPage.12=Generate Converter classes to convert Dto and entity
 NewProjectWizardFourthPage.13=Eclipse Cooperation
 NewProjectWizardFourthPage.14=Synchronize resources automatically with ResourceSynchronizer plugin
 NewProjectWizardFourthPage.15=URL for the synchronization server
+SkeletonArtifactResolver.1=Skeleton has not been found. Please change condition.
