--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -17,7 +17,6 @@ NewProjectWizardThirdPage.9=\u63a5\u7d9a\u30e6\u30fc\u30b6
 NewProjectWizardThirdPage.10=\u63a5\u7d9a\u30d1\u30b9\u30ef\u30fc\u30c9
 NewProjectWizardSecondPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
 NewProjectWizardSecondPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3067\u3042\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardSecondPage.3=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u53d6\u5f97\u3059\u308b\u305f\u3081\u306b\u300c\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u53d6\u5f97\u3059\u308b\u300d\u30dc\u30bf\u30f3\u3092\u62bc\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.4=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3
 NewProjectWizardSecondPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3
 NewProjectWizardSecondPage.6=\u30b9\u30b1\u30eb\u30c8\u30f3\u306eID\u3092\u6307\u5b9a\u3059\u308b
@@ -43,10 +42,10 @@ NewProjectWizardFirstPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID\u
 NewProjectWizardFirstPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
 NewProjectWizardSecondPage.10=\u6700\u65b0\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b
 NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u53d6\u5f97\u3059\u308b
-NewProjectWizardSecondPage.12=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u5909\u3048\u3066\u518d\u5ea6\u300c\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u53d6\u5f97\u3059\u308b\u300d\u30dc\u30bf\u30f3\u3092\u62bc\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardFourthPage.10=S2Dao\u7528\u306eDao\u30af\u30e9\u30b9\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
 NewProjectWizardFourthPage.11=S2Dxo\u7528\u306eDxo\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
 NewProjectWizardFourthPage.12=Dto\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u306e\u76f8\u4e92\u5909\u63db\u3092\u884c\u306a\u3046\u305f\u3081\u306eConverter\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
 NewProjectWizardFourthPage.13=Eclipse\u9023\u643a
 NewProjectWizardFourthPage.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
 NewProjectWizardFourthPage.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
+SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3002\u6761\u4ef6\u3092\u5909\u3048\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
