・スケルトンアーカイブの取得中メッセージが正しく表示されない問題に対処した。 ・文字列を外部化した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1537 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -23,6 +23,7 @@ NewProjectWizardSecondPage.6=Specify skeleton's ID
 NewProjectWizardSecondPage.7=Group ID
 NewProjectWizardSecondPage.8=Artifact ID
 NewProjectWizardSecondPage.9=Version
+NewProjectWizardSecondPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
 NewProjectWizardFourthPage.2=Project detail
 NewProjectWizardFourthPage.3=Specify detail of project settings.
 NewProjectWizardFourthPage.4=Auth generation
