--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -23,6 +23,7 @@ NewProjectWizardSecondPage.6=\u30b9\u30b1\u30eb\u30c8\u30f3\u306eID\u3092\u6307\
 NewProjectWizardSecondPage.7=\u30b0\u30eb\u30fc\u30d7ID
 NewProjectWizardSecondPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
 NewProjectWizardSecondPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
+NewProjectWizardSecondPage.0=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u30ec\u30dd\u30b8\u30c8\u30ea\u304b\u3089\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059\u3002\uff08\u3053\u306e\u51e6\u7406\u306f\u6642\u9593\u304c\u304b\u304b\u308b\u3053\u3068\u304c\u3042\u308a\u307e\u3059\uff09
 NewProjectWizardFourthPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u8a2d\u5b9a\u306e\u6307\u5b9a
 NewProjectWizardFourthPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardFourthPage.4=\u81ea\u52d5\u751f\u6210
