JREを選択できるようにした。あとはそれをpom.xmlと.classpathに反映させるようにする。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1538 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -3,6 +3,7 @@ NewProjectWizard.13=Failed to expand application skeleton.
 NewProjectWizard.14=Create superclass
 NewProjectWizard.18=Can't evaluate template: 
 NewProjectWizard.19=Set up project
+NewProjectWizard.11=New Ymir Project
 NewProjectWizard.20=Update application properties
 NewProjectWizard.23=Set up classpath
 NewProjectWizardThirdPage.1=Project settings
@@ -41,6 +42,7 @@ NewProjectWizardFirstPage.6=Use root package name as group ID
 NewProjectWizardFirstPage.7=Artifact ID
 NewProjectWizardFirstPage.8=Use project name as artifact ID
 NewProjectWizardFirstPage.9=Version
+NewProjectWizardFirstPage.0=JRE Container
 NewProjectWizardSecondPage.10=Use the latest version
 NewProjectWizardSecondPage.11=Get skeleton archive
 NewProjectWizardFourthPage.10=Generate Dao and entity classes for S2Dao
