--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -3,6 +3,7 @@ NewProjectWizard.13=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1
 NewProjectWizard.14=Page\u306e\u30b9\u30fc\u30d1\u30fc\u30af\u30e9\u30b9\u3092\u751f\u6210\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.18=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u8a55\u4fa1\u306b\u5931\u6557\u3057\u307e\u3057\u305f: 
 NewProjectWizard.19=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizard.11=\u65b0\u898fYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 NewProjectWizard.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizardThirdPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a\u306e\u6307\u5b9a
