JREを指定できるようにするための残りの処理を記述した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1539 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -6,6 +6,8 @@ NewProjectWizard.19=Set up project
 NewProjectWizard.11=New Ymir Project
 NewProjectWizard.20=Update application properties
 NewProjectWizard.23=Set up classpath
+NewProjectWizard.2=J2SE-1.5
+NewProjectWizard.25=Set up JDK compliance settings
 NewProjectWizardThirdPage.1=Project settings
 NewProjectWizardThirdPage.2=Specify project settings.
 NewProjectWizardThirdPage.3=View
