--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -6,6 +6,7 @@ NewProjectWizard.19=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u30bb\u30c3\u30c8
 NewProjectWizard.11=\u65b0\u898fYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 NewProjectWizard.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizard.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizardThirdPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a\u306e\u6307\u5b9a
 NewProjectWizardThirdPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardThirdPage.3=\u30d3\u30e5\u30fc
