--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
@@ -1,5 +1,5 @@
-Activator.10=Generic Ymir project. Freyja ZPT engine is used for view template, and S2Dao is used for database access.
-Activator.13=Freyja ZPT engine is used for view template, and DBFlute is used for database access.
-Activator.14=Resolve project skeleton artifact
-Activator.15=Expand project skeleton
-Activator.21=Write file
+Activator.10=
+Activator.13=
+Activator.14=
+Activator.15=
+Activator.21=
