スケルトン選択画面を整理した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1542 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -20,9 +20,8 @@ NewProjectWizardThirdPage.9=User name
 NewProjectWizardThirdPage.10=Password
 NewProjectWizardSecondPage.1=Project skeleton
 NewProjectWizardSecondPage.2=Specify project skeleton.
-NewProjectWizardSecondPage.4=Project skeleton
-NewProjectWizardSecondPage.5=Available skeletons
-NewProjectWizardSecondPage.6=Specify skeleton's ID
+NewProjectWizardSecondPage.5=Available skeleton templates
+NewProjectWizardSecondPage.6=Choose a skeleton from the templates
 NewProjectWizardSecondPage.7=Group ID
 NewProjectWizardSecondPage.8=Artifact ID
 NewProjectWizardSecondPage.9=Version
