--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -19,9 +19,8 @@ NewProjectWizardThirdPage.9=\u63a5\u7d9a\u30e6\u30fc\u30b6
 NewProjectWizardThirdPage.10=\u63a5\u7d9a\u30d1\u30b9\u30ef\u30fc\u30c9
 NewProjectWizardSecondPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
 NewProjectWizardSecondPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3067\u3042\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardSecondPage.4=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3
-NewProjectWizardSecondPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3
-NewProjectWizardSecondPage.6=\u30b9\u30b1\u30eb\u30c8\u30f3\u306eID\u3092\u6307\u5b9a\u3059\u308b
+NewProjectWizardSecondPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
+NewProjectWizardSecondPage.6=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u304b\u3089\u9078\u629e\u3059\u308b
 NewProjectWizardSecondPage.7=\u30b0\u30eb\u30fc\u30d7ID
 NewProjectWizardSecondPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
 NewProjectWizardSecondPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
