--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -6,7 +6,7 @@ NewProjectWizard.19=Set up project
 NewProjectWizard.11=New Ymir Project
 NewProjectWizard.20=Update application properties
 NewProjectWizard.23=Set up classpath
-NewProjectWizard.2=J2SE-1.5
+NewProjectWizard.1=Copy dependencies
 NewProjectWizard.25=Set up JDK compliance settings
 NewProjectWizardThirdPage.1=Project settings
 NewProjectWizardThirdPage.2=Specify project settings.
@@ -17,6 +17,7 @@ NewProjectWizardThirdPage.6=Database
 NewProjectWizardThirdPage.7=Driver's class name
 NewProjectWizardThirdPage.8=URL for connection
 NewProjectWizardThirdPage.9=User name
+NewProjectWizardThirdPage.0=Database type
 NewProjectWizardThirdPage.10=Password
 NewProjectWizardSecondPage.1=Project skeleton
 NewProjectWizardSecondPage.2=Specify project skeleton.
