・スケルトンに.settings/org.eclipse.jdt.core.prefsがないと正しく動作しないことがある不具合を修正した。 ・文字列を外部化した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1552 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
@@ -1,5 +1,8 @@
-Activator.10=
-Activator.13=
-Activator.14=
-Activator.15=
-Activator.21=
+Activator.10=Freyja ZPT Engine is available as the template engine, and S2Dao for database accessing. 
+Activator.13=Freyja ZPT Engine is available as the template engine, and DBFlute for database accessing.
+Activator.14=Resolve artifact
+Activator.15=Expand skeleton
+Activator.21=Write file
+Activator.50=Custom setting
+Activator.55=Get resource as string
+Activator.58=Get properties resource
