動作確認をして、発見された問題点を修正した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1563 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
@@ -6,3 +6,11 @@ Activator.21=Write file
 Activator.50=Custom setting
 Activator.55=Get resource as string
 Activator.58=Get properties resource
+Activator.1=JSON communication feature
+Activator.4=DBFlute feature
+Activator.3=Add a feature to access database with DBFlute.
+Activator.0=Add a feature to communicate with JSON.
+Activator.60=AMF communication feature
+Activator.61=Add a feature to communicate with AMF.
+Activator.63=Utility classes
+Activator.64=Add utility classes for easier evelopment.
