--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -53,4 +53,12 @@ NewProjectWizardFourthPage.12=Generate Converter classes to convert Dto and enti
 NewProjectWizardFourthPage.13=Eclipse Cooperation
 NewProjectWizardFourthPage.14=Synchronize resources automatically with ResourceSynchronizer plugin
 NewProjectWizardFourthPage.15=URL for the synchronization server
-SkeletonArtifactResolver.1=Skeleton has not been found. Please change condition.
+SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
+NewProjectWizardSecondPage.11=Skeleton
+NewProjectWizardSecondPage.12=Option
+NewProjectWizardSecondPage.13=Can't select this option since corresponding option archive is not found.
+NewProjectWizardSecondPage.14=Custom options to be added
+NewProjectWizardSecondPage.15=Add
+NewProjectWizardSecondPage.19=Option archive has not been found. Please change condition.
+NewProjectWizardSecondPage.20=Remove
+NewProjectWizardSecondPage.21=Resolve fragment artifact
