--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -20,7 +20,7 @@ NewProjectWizardThirdPage.8=\u63a5\u7d9aURL
 NewProjectWizardThirdPage.9=\u63a5\u7d9a\u30e6\u30fc\u30b6
 NewProjectWizardThirdPage.10=\u63a5\u7d9a\u30d1\u30b9\u30ef\u30fc\u30c9
 NewProjectWizardSecondPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
-NewProjectWizardSecondPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3067\u3042\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+NewProjectWizardSecondPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3068\u306a\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
 NewProjectWizardSecondPage.6=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u304b\u3089\u9078\u629e\u3059\u308b
 NewProjectWizardSecondPage.7=\u30b0\u30eb\u30fc\u30d7ID
@@ -52,4 +52,12 @@ NewProjectWizardFourthPage.12=Dto\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u306
 NewProjectWizardFourthPage.13=Eclipse\u9023\u643a
 NewProjectWizardFourthPage.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
 NewProjectWizardFourthPage.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
-SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3002\u6761\u4ef6\u3092\u5909\u3048\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
+NewProjectWizardSecondPage.12=\u30aa\u30d7\u30b7\u30e7\u30f3
+NewProjectWizardSecondPage.13=\u30aa\u30d7\u30b7\u30e7\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
+NewProjectWizardSecondPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30aa\u30d7\u30b7\u30e7\u30f3
+NewProjectWizardSecondPage.15=\u8ffd\u52a0
+NewProjectWizardSecondPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+NewProjectWizardSecondPage.20=\u524a\u9664
+NewProjectWizardSecondPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
