--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -8,6 +8,7 @@ NewProjectWizard.20=Update application properties
 NewProjectWizard.23=Set up classpath
 NewProjectWizard.25=Set up JDK compliance settings
 NewProjectWizard.1=Copy dependencies
+NewProjectWizard.2={0} is required.
 NewProjectWizardThirdPage.1=Project settings
 NewProjectWizardThirdPage.2=Specify project settings.
 NewProjectWizardThirdPage.3=View
@@ -27,14 +28,13 @@ NewProjectWizardSecondPage.7=Group ID
 NewProjectWizardSecondPage.8=Artifact ID
 NewProjectWizardSecondPage.9=Version
 NewProjectWizardSecondPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
-NewProjectWizardFourthPage.2=Project detail
-NewProjectWizardFourthPage.3=Specify detail of project settings.
-NewProjectWizardFourthPage.4=Auth generation
-NewProjectWizardFourthPage.5=Specify common parent class for all Page class
-NewProjectWizardFourthPage.6=Common parent class name
-NewProjectWizardFourthPage.7=Don't generate Dto classes if Freyja's render classes are available
-NewProjectWizardFourthPage.8=Enable Beantable feature
-NewProjectWizardFourthPage.9=Generate Dto classes corresponding to form tags
+YmirConfigurationComponent.2=Ymir project
+YmirConfigurationComponent.4=Auto generation
+YmirConfigurationComponent.5=Specify common parent class for all Page class
+YmirConfigurationComponent.6=Common parent class name
+YmirConfigurationComponent.7=Don't generate Dto classes if Freyja's render classes are available
+YmirConfigurationComponent.8=Enable Beantable feature
+YmirConfigurationComponent.9=Generate Dto classes corresponding to form tags
 NewProjectWizardFirstPage.1=Create a Ymir project
 NewProjectWizardFirstPage.2=Create a Ymir project in the workspace or in an external location.
 NewProjectWizardFirstPage.3=Project inforamtion
@@ -47,12 +47,12 @@ NewProjectWizardFirstPage.9=Version
 NewProjectWizardFirstPage.0=JRE Container
 NewProjectWizardSecondPage.10=Use the latest version
 NewProjectWizardSecondPage.11=Get skeleton archive
-NewProjectWizardFourthPage.10=Generate Dao and entity classes for S2Dao
-NewProjectWizardFourthPage.11=Generate Dxo classes for S2Dxo
-NewProjectWizardFourthPage.12=Generate Converter classes to convert Dto and entity
-NewProjectWizardFourthPage.13=Eclipse Cooperation
-NewProjectWizardFourthPage.14=Synchronize resources automatically with ResourceSynchronizer plugin
-NewProjectWizardFourthPage.15=URL for the synchronization server
+YmirConfigurationComponent.10=Generate Dao and entity classes for S2Dao
+YmirConfigurationComponent.11=Generate Dxo classes for S2Dxo
+YmirConfigurationComponent.12=Generate Converter classes to convert Dto and entity
+YmirConfigurationComponent.13=Eclipse Cooperation
+YmirConfigurationComponent.14=Synchronize resources automatically with ResourceSynchronizer plugin
+YmirConfigurationComponent.15=URL for the synchronization server
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
 NewProjectWizardSecondPage.11=Skeleton
 NewProjectWizardSecondPage.12=Option
