--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -8,6 +8,7 @@ NewProjectWizard.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7
 NewProjectWizard.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.1=\u4f9d\u5b58\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u30b3\u30d4\u30fc\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizard.2={0}\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardThirdPage.0=\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u7a2e\u985e
 NewProjectWizardThirdPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a\u306e\u6307\u5b9a
 NewProjectWizardThirdPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
@@ -27,14 +28,13 @@ NewProjectWizardSecondPage.7=\u30b0\u30eb\u30fc\u30d7ID
 NewProjectWizardSecondPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
 NewProjectWizardSecondPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
 NewProjectWizardSecondPage.0=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u30ec\u30dd\u30b8\u30c8\u30ea\u304b\u3089\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059\u3002\uff08\u3053\u306e\u51e6\u7406\u306f\u6642\u9593\u304c\u304b\u304b\u308b\u3053\u3068\u304c\u3042\u308a\u307e\u3059\uff09
-NewProjectWizardFourthPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u8a2d\u5b9a\u306e\u6307\u5b9a
-NewProjectWizardFourthPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u8a73\u7d30\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardFourthPage.4=\u81ea\u52d5\u751f\u6210
-NewProjectWizardFourthPage.5=Page\u30af\u30e9\u30b9\u306e\u5171\u901a\u306e\u89aa\u30af\u30e9\u30b9\u3092\u6307\u5b9a\u3059\u308b
-NewProjectWizardFourthPage.6=Page\u30af\u30e9\u30b9\u306e\u5171\u901a\u306e\u89aa\u30af\u30e9\u30b9
-NewProjectWizardFourthPage.7=Freyja\u306e\u30ec\u30f3\u30c0\u30ea\u30f3\u30b0\u30af\u30e9\u30b9\u304c\u4f7f\u3048\u308b\u5834\u5408\u306fDto\u30af\u30e9\u30b9\u3092\u751f\u6210\u3057\u306a\u3044
-NewProjectWizardFourthPage.8=Beantable\u6a5f\u80fd\u3092\u5229\u7528\u3059\u308b
-NewProjectWizardFourthPage.9=form\u30bf\u30b0\u306ename\u5c5e\u6027\u3068\u540c\u3058\u540d\u524d\u3067form\u306b\u5bfe\u5fdc\u3059\u308bDto\u30af\u30e9\u30b9\u3092\u751f\u6210\u3059\u308b
+YmirConfigurationComponent.2=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a
+YmirConfigurationComponent.4=\u81ea\u52d5\u751f\u6210
+YmirConfigurationComponent.5=Page\u30af\u30e9\u30b9\u306e\u5171\u901a\u306e\u89aa\u30af\u30e9\u30b9\u3092\u6307\u5b9a\u3059\u308b
+YmirConfigurationComponent.6=Page\u30af\u30e9\u30b9\u306e\u5171\u901a\u306e\u89aa\u30af\u30e9\u30b9
+YmirConfigurationComponent.7=Freyja\u306e\u30ec\u30f3\u30c0\u30ea\u30f3\u30b0\u30af\u30e9\u30b9\u304c\u4f7f\u3048\u308b\u5834\u5408\u306fDto\u30af\u30e9\u30b9\u3092\u751f\u6210\u3057\u306a\u3044
+YmirConfigurationComponent.8=Beantable\u6a5f\u80fd\u3092\u5229\u7528\u3059\u308b
+YmirConfigurationComponent.9=form\u30bf\u30b0\u306ename\u5c5e\u6027\u3068\u540c\u3058\u540d\u524d\u3067form\u306b\u5bfe\u5fdc\u3059\u308bDto\u30af\u30e9\u30b9\u3092\u751f\u6210\u3059\u308b
 NewProjectWizardFirstPage.1=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
 NewProjectWizardFirstPage.2=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 NewProjectWizardFirstPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u60c5\u5831
@@ -46,12 +46,12 @@ NewProjectWizardFirstPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID\u
 NewProjectWizardFirstPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
 NewProjectWizardSecondPage.10=\u6700\u65b0\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b
 NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u53d6\u5f97\u3059\u308b
-NewProjectWizardFourthPage.10=S2Dao\u7528\u306eDao\u30af\u30e9\u30b9\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
-NewProjectWizardFourthPage.11=S2Dxo\u7528\u306eDxo\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
-NewProjectWizardFourthPage.12=Dto\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u306e\u76f8\u4e92\u5909\u63db\u3092\u884c\u306a\u3046\u305f\u3081\u306eConverter\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
-NewProjectWizardFourthPage.13=Eclipse\u9023\u643a
-NewProjectWizardFourthPage.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
-NewProjectWizardFourthPage.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
+YmirConfigurationComponent.10=S2Dao\u7528\u306eDao\u30af\u30e9\u30b9\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
+YmirConfigurationComponent.11=S2Dxo\u7528\u306eDxo\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
+YmirConfigurationComponent.12=Dto\u3068\u30a8\u30f3\u30c6\u30a3\u30c6\u30a3\u306e\u76f8\u4e92\u5909\u63db\u3092\u884c\u306a\u3046\u305f\u3081\u306eConverter\u30af\u30e9\u30b9\u3092\u81ea\u52d5\u751f\u6210\u3059\u308b
+YmirConfigurationComponent.13=Eclipse\u9023\u643a
+YmirConfigurationComponent.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
+YmirConfigurationComponent.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
 SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
 NewProjectWizardSecondPage.12=\u30aa\u30d7\u30b7\u30e7\u30f3
