文字列の外部化を行なった。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1578 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -20,6 +20,8 @@ NewProjectWizardThirdPage.8=URL for connection
 NewProjectWizardThirdPage.9=User name
 NewProjectWizardThirdPage.0=Database type
 NewProjectWizardThirdPage.10=Password
+NewProjectWizardThirdPage.11=General
+NewProjectWizardThirdPage.12=Skeleton specific
 NewProjectWizardSecondPage.1=Project skeleton
 NewProjectWizardSecondPage.2=Specify project skeleton.
 NewProjectWizardSecondPage.5=Available skeleton templates
@@ -35,6 +37,11 @@ YmirConfigurationComponent.6=Common parent class name
 YmirConfigurationComponent.7=Don't generate Dto classes if Freyja's render classes are available
 YmirConfigurationComponent.8=Enable Beantable feature
 YmirConfigurationComponent.9=Generate Dto classes corresponding to form tags
+YmirConfigurationBlock.0=Enable auto generation feature
+YmirConfigurationBlock.1=Field name's prefix and suffix
+YmirConfigurationBlock.2=Activate the inplace editor for HTML templates when double-clicked on a Web browser
+YmirConfigurationBlock.3=Display the control panel when mouse cursor is over the top of a Web browser
+YmirConfigurationBlock.4=Miscellaneous
 NewProjectWizardFirstPage.1=Create a Ymir project
 NewProjectWizardFirstPage.2=Create a Ymir project in the workspace or in an external location.
 NewProjectWizardFirstPage.3=Project inforamtion
