--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -61,3 +61,10 @@ NewProjectWizardSecondPage.15=\u8ffd\u52a0
 NewProjectWizardSecondPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.20=\u524a\u9664
 NewProjectWizardSecondPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizardThirdPage.11=\u5168\u822C
+NewProjectWizardThirdPage.12=\u30B9\u30B1\u30EB\u30C8\u30F3\u56FA\u6709
+YmirConfigurationBlock.0=\u81EA\u52D5\u751F\u6210\u6A5F\u80FD\u3092\u6709\u52B9\u306B\u3059\u308B
+YmirConfigurationBlock.1=\u30D5\u30A3\u30FC\u30EB\u30C9\u540D\u306E\u30D7\u30EC\u30D5\u30A3\u30C3\u30AF\u30B9\u3068\u30B5\u30D5\u30A3\u30C3\u30AF\u30B9
+YmirConfigurationBlock.2=\u30D6\u30E9\u30A6\u30B6\u3067\u30C0\u30D6\u30EB\u30AF\u30EA\u30C3\u30AF\u3057\u305F\u6642\u306BHTML\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8\u306E\u30A4\u30F3\u30D7\u30EC\u30FC\u30B9\u30A8\u30C7\u30A3\u30BF\u3092\u8D77\u52D5\u3059\u308B
+YmirConfigurationBlock.3=\u30D6\u30E9\u30A6\u30B6\u306E\u4E0A\u90E8\u306B\u30DE\u30A6\u30B9\u30AB\u30FC\u30BD\u30EB\u3092\u79FB\u52D5\u3057\u305F\u6642\u306B\u30B3\u30F3\u30C8\u30ED\u30FC\u30EB\u30D1\u30CD\u30EB\u3092\u8868\u793A\u3059\u308B
+YmirConfigurationBlock.4=\u305D\u306E\u4ED6
