--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -54,17 +54,17 @@ YmirConfigurationComponent.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4
 YmirConfigurationComponent.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
 SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
-NewProjectWizardSecondPage.12=\u30aa\u30d7\u30b7\u30e7\u30f3
-NewProjectWizardSecondPage.13=\u30aa\u30d7\u30b7\u30e7\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
-NewProjectWizardSecondPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30aa\u30d7\u30b7\u30e7\u30f3
+NewProjectWizardSecondPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
+NewProjectWizardSecondPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
+NewProjectWizardSecondPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
 NewProjectWizardSecondPage.15=\u8ffd\u52a0
-NewProjectWizardSecondPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+NewProjectWizardSecondPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.20=\u524a\u9664
 NewProjectWizardSecondPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
-NewProjectWizardThirdPage.11=\u5168\u822C
-NewProjectWizardThirdPage.12=\u30B9\u30B1\u30EB\u30C8\u30F3\u56FA\u6709
-YmirConfigurationBlock.0=\u81EA\u52D5\u751F\u6210\u6A5F\u80FD\u3092\u6709\u52B9\u306B\u3059\u308B
-YmirConfigurationBlock.1=\u30D5\u30A3\u30FC\u30EB\u30C9\u540D\u306E\u30D7\u30EC\u30D5\u30A3\u30C3\u30AF\u30B9\u3068\u30B5\u30D5\u30A3\u30C3\u30AF\u30B9
-YmirConfigurationBlock.2=\u30D6\u30E9\u30A6\u30B6\u3067\u30C0\u30D6\u30EB\u30AF\u30EA\u30C3\u30AF\u3057\u305F\u6642\u306BHTML\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8\u306E\u30A4\u30F3\u30D7\u30EC\u30FC\u30B9\u30A8\u30C7\u30A3\u30BF\u3092\u8D77\u52D5\u3059\u308B
-YmirConfigurationBlock.3=\u30D6\u30E9\u30A6\u30B6\u306E\u4E0A\u90E8\u306B\u30DE\u30A6\u30B9\u30AB\u30FC\u30BD\u30EB\u3092\u79FB\u52D5\u3057\u305F\u6642\u306B\u30B3\u30F3\u30C8\u30ED\u30FC\u30EB\u30D1\u30CD\u30EB\u3092\u8868\u793A\u3059\u308B
-YmirConfigurationBlock.4=\u305D\u306E\u4ED6
+NewProjectWizardThirdPage.11=\u5168\u822c
+NewProjectWizardThirdPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
+YmirConfigurationBlock.0=\u81ea\u52d5\u751f\u6210\u6a5f\u80fd\u3092\u6709\u52b9\u306b\u3059\u308b
+YmirConfigurationBlock.1=\u30d5\u30a3\u30fc\u30eb\u30c9\u540d\u306e\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9\u3068\u30b5\u30d5\u30a3\u30c3\u30af\u30b9
+YmirConfigurationBlock.2=\u30d6\u30e9\u30a6\u30b6\u3067\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u305f\u6642\u306bHTML\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u30a4\u30f3\u30d7\u30ec\u30fc\u30b9\u30a8\u30c7\u30a3\u30bf\u3092\u8d77\u52d5\u3059\u308b
+YmirConfigurationBlock.3=\u30d6\u30e9\u30a6\u30b6\u306e\u4e0a\u90e8\u306b\u30de\u30a6\u30b9\u30ab\u30fc\u30bd\u30eb\u3092\u79fb\u52d5\u3057\u305f\u6642\u306b\u30b3\u30f3\u30c8\u30ed\u30fc\u30eb\u30d1\u30cd\u30eb\u3092\u8868\u793a\u3059\u308b
+YmirConfigurationBlock.4=\u305d\u306e\u4ed6
