non java projectを正しく展開できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1628 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/messages.properties
@@ -1,5 +1,6 @@
-Activator.10=Freyja ZPT Engine is available as the template engine, and S2Dao for database accessing. 
-Activator.13=Freyja ZPT Engine is available as the template engine, and DBFlute for database accessing.
+Activator.10=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine. 
+Activator.13=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine, \
+  and DBFlute for database accessing.
 Activator.14=Resolve artifact
 Activator.15=Expand skeleton
 Activator.21=Write file
@@ -12,5 +13,11 @@ Activator.3=Add a feature to access database with DBFlute.
 Activator.0=Add a feature to communicate with JSON.
 Activator.60=AMF communication feature
 Activator.61=Add a feature to communicate with AMF.
-Activator.63=Utility classes
+Activator.63=Utilities
 Activator.64=Add utility classes for easier evelopment.
+Activator.65=Generic Ymir project
+Activator.66=Ymir+DBFlute project
+Activator.68=Vili skeleton project
+Activator.69=Create a project to develop a Vili project skeleton.
+Activator.71=Vili fragment project
+Activator.72=Create a project to develop a Vili project fragment.
