--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -22,6 +22,7 @@ NewProjectWizardThirdPage.0=Database type
 NewProjectWizardThirdPage.10=Password
 NewProjectWizardThirdPage.11=General
 NewProjectWizardThirdPage.12=Skeleton specific
+NewProjectWizardThirdPage.13=There is no configurable settings.
 NewProjectWizardSecondPage.1=Project skeleton
 NewProjectWizardSecondPage.2=Specify project skeleton.
 NewProjectWizardSecondPage.5=Available skeleton templates
@@ -61,6 +62,7 @@ YmirConfigurationComponent.13=Eclipse Cooperation
 YmirConfigurationComponent.14=Synchronize resources automatically with ResourceSynchronizer plugin
 YmirConfigurationComponent.15=URL for the synchronization server
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
+SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
 NewProjectWizardSecondPage.11=Skeleton
 NewProjectWizardSecondPage.12=Option
 NewProjectWizardSecondPage.13=Can't select this option since corresponding option archive is not found.
@@ -69,3 +71,4 @@ NewProjectWizardSecondPage.15=Add
 NewProjectWizardSecondPage.19=Option archive has not been found. Please change condition.
 NewProjectWizardSecondPage.20=Remove
 NewProjectWizardSecondPage.21=Resolve fragment artifact
+NewProjectWizardSecondPage.22=Specified archive is not a Vili fragment.
