--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -20,6 +20,9 @@ NewProjectWizardThirdPage.7=\u30c9\u30e9\u30a4\u30d0\u30af\u30e9\u30b9
 NewProjectWizardThirdPage.8=\u63a5\u7d9aURL
 NewProjectWizardThirdPage.9=\u63a5\u7d9a\u30e6\u30fc\u30b6
 NewProjectWizardThirdPage.10=\u63a5\u7d9a\u30d1\u30b9\u30ef\u30fc\u30c9
+NewProjectWizardThirdPage.11=\u5168\u822c
+NewProjectWizardThirdPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
+NewProjectWizardThirdPage.13=\u8a2d\u5b9a\u53ef\u80fd\u306a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 NewProjectWizardSecondPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
 NewProjectWizardSecondPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3068\u306a\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
@@ -53,6 +56,7 @@ YmirConfigurationComponent.13=Eclipse\u9023\u643a
 YmirConfigurationComponent.14=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
 YmirConfigurationComponent.15=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
 SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+SkeletonArtifactResolver.0=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30b9\u30b1\u30eb\u30c8\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 NewProjectWizardSecondPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
 NewProjectWizardSecondPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
 NewProjectWizardSecondPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
@@ -61,8 +65,7 @@ NewProjectWizardSecondPage.15=\u8ffd\u52a0
 NewProjectWizardSecondPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardSecondPage.20=\u524a\u9664
 NewProjectWizardSecondPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
-NewProjectWizardThirdPage.11=\u5168\u822c
-NewProjectWizardThirdPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
+NewProjectWizardSecondPage.22=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 YmirConfigurationBlock.0=\u81ea\u52d5\u751f\u6210\u6a5f\u80fd\u3092\u6709\u52b9\u306b\u3059\u308b
 YmirConfigurationBlock.1=\u30d5\u30a3\u30fc\u30eb\u30c9\u540d\u306e\u30d7\u30ec\u30d5\u30a3\u30c3\u30af\u30b9\u3068\u30b5\u30d5\u30a3\u30c3\u30af\u30b9
 YmirConfigurationBlock.2=\u30d6\u30e9\u30a6\u30b6\u3067\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u305f\u6642\u306bHTML\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u30a4\u30f3\u30d7\u30ec\u30fc\u30b9\u30a8\u30c7\u30a3\u30bf\u3092\u8d77\u52d5\u3059\u308b
