ウィザードにあった一部の設定をpreferencesに移動した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1673 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -25,7 +25,7 @@ NewProjectWizardThirdPage.12=Skeleton specific
 NewProjectWizardThirdPage.13=There is no configurable settings.
 NewProjectWizardFirstPage.1=Project skeleton
 NewProjectWizardFirstPage.2=Specify project skeleton.
-NewProjectWizardFirstPage.5=Available skeleton templates
+NewProjectWizardFirstPage.5=Available skeleton templates:
 NewProjectWizardFirstPage.6=Choose a skeleton from the templates
 NewProjectWizardFirstPage.7=Group ID
 NewProjectWizardFirstPage.8=Artifact ID
@@ -66,9 +66,12 @@ SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
 NewProjectWizardFirstPage.11=Skeleton
 NewProjectWizardFirstPage.12=Option
 NewProjectWizardFirstPage.13=Can't select this option since corresponding option archive is not found.
-NewProjectWizardFirstPage.14=Custom options to be added
+NewProjectWizardFirstPage.14=Custom options to be added:
 NewProjectWizardFirstPage.15=Add
 NewProjectWizardFirstPage.19=Option archive has not been found. Please change condition.
 NewProjectWizardFirstPage.20=Remove
 NewProjectWizardFirstPage.21=Resolve fragment artifact
 NewProjectWizardFirstPage.22=Specified archive is not a Vili fragment.
+NewProjectWizardFirstPage.24=Detail
+NewProjectWizardFirstPage.25=Archives to be used:
+NewProjectWizardFirstPage.27=local
