--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -25,7 +25,7 @@ NewProjectWizardThirdPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
 NewProjectWizardThirdPage.13=\u8a2d\u5b9a\u53ef\u80fd\u306a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 NewProjectWizardFirstPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
 NewProjectWizardFirstPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3068\u306a\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardFirstPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
+NewProjectWizardFirstPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8:
 NewProjectWizardFirstPage.6=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u304b\u3089\u9078\u629e\u3059\u308b
 NewProjectWizardFirstPage.7=\u30b0\u30eb\u30fc\u30d7ID
 NewProjectWizardFirstPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
@@ -60,7 +60,7 @@ SkeletonArtifactResolver.0=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a
 NewProjectWizardFirstPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
 NewProjectWizardFirstPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
 NewProjectWizardFirstPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
-NewProjectWizardFirstPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
+NewProjectWizardFirstPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8:
 NewProjectWizardFirstPage.15=\u8ffd\u52a0
 NewProjectWizardFirstPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizardFirstPage.20=\u524a\u9664
@@ -71,3 +71,6 @@ YmirConfigurationBlock.1=\u30d5\u30a3\u30fc\u30eb\u30c9\u540d\u306e\u30d7\u30ec\
 YmirConfigurationBlock.2=\u30d6\u30e9\u30a6\u30b6\u3067\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u305f\u6642\u306bHTML\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u30a4\u30f3\u30d7\u30ec\u30fc\u30b9\u30a8\u30c7\u30a3\u30bf\u3092\u8d77\u52d5\u3059\u308b
 YmirConfigurationBlock.3=\u30d6\u30e9\u30a6\u30b6\u306e\u4e0a\u90e8\u306b\u30de\u30a6\u30b9\u30ab\u30fc\u30bd\u30eb\u3092\u79fb\u52d5\u3057\u305f\u6642\u306b\u30b3\u30f3\u30c8\u30ed\u30fc\u30eb\u30d1\u30cd\u30eb\u3092\u8868\u793a\u3059\u308b
 YmirConfigurationBlock.4=\u305d\u306e\u4ed6
+NewProjectWizardFirstPage.24=\u8a73\u7d30
+NewProjectWizardFirstPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
+NewProjectWizardFirstPage.27=\u30ed\u30fc\u30ab\u30eb
