どのHOT deploy機構を使用するかを設定できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1800 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -43,6 +43,10 @@ YmirConfigurationBlock.1=Field name's prefix and suffix
 YmirConfigurationBlock.2=Activate the inplace editor for HTML templates when double-clicked on a Web browser
 YmirConfigurationBlock.3=Display the control panel when mouse cursor is over the top of a Web browser
 YmirConfigurationBlock.4=Miscellaneous
+YmirConfigurationBlock.5=HOT deploy
+YmirConfigurationBlock.6=Use Seasar2.4's HOT deploy mechanism
+YmirConfigurationBlock.7=Use JavaRebel's HOT deploy mechanism (Need to set up a servlet container to enable JavaRebel)
+YmirConfigurationBlock.8=Do not use HOT deploy mechanism
 NewProjectWizardSecondPage.1=Create a Ymir project
 NewProjectWizardSecondPage.2=Create a Ymir project in the workspace or in an external location.
 NewProjectWizardSecondPage.3=Project inforamtion
