--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -71,6 +71,10 @@ YmirConfigurationBlock.1=\u30d5\u30a3\u30fc\u30eb\u30c9\u540d\u306e\u30d7\u30ec\
 YmirConfigurationBlock.2=\u30d6\u30e9\u30a6\u30b6\u3067\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u305f\u6642\u306bHTML\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u30a4\u30f3\u30d7\u30ec\u30fc\u30b9\u30a8\u30c7\u30a3\u30bf\u3092\u8d77\u52d5\u3059\u308b
 YmirConfigurationBlock.3=\u30d6\u30e9\u30a6\u30b6\u306e\u4e0a\u90e8\u306b\u30de\u30a6\u30b9\u30ab\u30fc\u30bd\u30eb\u3092\u79fb\u52d5\u3057\u305f\u6642\u306b\u30b3\u30f3\u30c8\u30ed\u30fc\u30eb\u30d1\u30cd\u30eb\u3092\u8868\u793a\u3059\u308b
 YmirConfigurationBlock.4=\u305d\u306e\u4ed6
+YmirConfigurationBlock.5=HOT deploy
+YmirConfigurationBlock.6=Seasar2.4\u306eHOT deploy\u6a5f\u69cb\u3092\u4f7f\u7528\u3059\u308b
+YmirConfigurationBlock.7=JavaRebel\u306eHOT deploy\u6a5f\u69cb\u3092\u4f7f\u7528\u3059\u308b\uff08\u5225\u9014\u30b5\u30fc\u30d6\u30ec\u30c3\u30c8\u30b3\u30f3\u30c6\u30ca\u306e\u8a2d\u5b9a\u304c\u5fc5\u8981\uff09
+YmirConfigurationBlock.8=HOT deploy\u6a5f\u69cb\u3092\u4f7f\u7528\u3057\u306a\u3044
 NewProjectWizardFirstPage.24=\u8a73\u7d30
 NewProjectWizardFirstPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
 NewProjectWizardFirstPage.27=\u30ed\u30fc\u30ab\u30eb
