スケルトンテンプレートを差し替えられるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1963 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -1,3 +1,21 @@
 ViliPreferencePage.0=General settings for Vili:
 ViliPreferencePage.1=Search snapshot repositories for skeleton archives
 ViliPreferencePage.2=Search snapshot repositories for fragment archives
+PreferenceInitializer.10=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine. 
+PreferenceInitializer.13=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine, \
+  and DBFlute for database accessing.
+PreferenceInitializer.1=JSON communication feature
+PreferenceInitializer.4=DBFlute feature
+PreferenceInitializer.3=Add a feature to access database with DBFlute.
+PreferenceInitializer.0=Add a feature to communicate with JSON.
+PreferenceInitializer.60=AMF communication feature
+PreferenceInitializer.61=Add a feature to communicate with AMF.
+PreferenceInitializer.63=Utilities
+PreferenceInitializer.64=Add utility classes for easier evelopment.
+PreferenceInitializer.65=Generic Ymir project
+PreferenceInitializer.66=Ymir+DBFlute project
+PreferenceInitializer.68=Vili skeleton project
+PreferenceInitializer.69=Create a project to develop a Vili project skeleton.
+PreferenceInitializer.71=Vili fragment project
+PreferenceInitializer.72=Create a project to develop a Vili project fragment.
+  
