--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
@@ -1,3 +1,20 @@
 ViliPreferencePage.0=Vili\u306e\u8a2d\u5b9a:
 ViliPreferencePage.1=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u691c\u7d22\u306b\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u542b\u3081\u308b
 ViliPreferencePage.2=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u691c\u7d22\u306b\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u542b\u3081\u308b
+PreferenceInitializer.10=\u6a19\u6e96\u306eYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30a8\u30f3\u30b8\u30f3\u306b\u306fFreyja ZPT\u30a8\u30f3\u30b8\u30f3\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
+PreferenceInitializer.13=\u6a19\u6e96\u306eYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30a8\u30f3\u30b8\u30f3\u306b\u306fFreyja ZPT\u30a8\u30f3\u30b8\u30f3\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002\
+  \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u30a2\u30af\u30bb\u30b9\u306b\u306fDBFlute\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
+PreferenceInitializer.1=JSON\u9023\u643a
+PreferenceInitializer.4=DBFlute
+PreferenceInitializer.3=DBFlute\u3092\u4f7f\u3063\u3066\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.0=JSON\u30ea\u30af\u30a8\u30b9\u30c8\u3092\u53d7\u3051\u53d6\u3063\u305f\u308aJSON\u30ec\u30b9\u30dd\u30f3\u30b9\u3092\u8fd4\u3057\u305f\u308a\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.60=AMF\u9023\u643a
+PreferenceInitializer.61=AMF\u30d7\u30ed\u30c8\u30b3\u30eb\u3067\u901a\u4fe1\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002Flex\u304b\u3089Page\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u30e1\u30bd\u30c3\u30c9\u3092\u547c\u3073\u51fa\u3059\u3053\u3068\u304c\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3059\u3002
+PreferenceInitializer.63=\u30e6\u30fc\u30c6\u30a3\u30ea\u30c6\u30a3
+PreferenceInitializer.64=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u52b9\u7387\u826f\u304f\u958b\u767a\u3059\u308b\u305f\u3081\u306e\u30e6\u30fc\u30c6\u30a3\u30ea\u30c6\u30a3\u30af\u30e9\u30b9\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.65=\u6a19\u6e96\u306eYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+PreferenceInitializer.66=Ymir+DBFlute\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+PreferenceInitializer.68=Vili\u30b9\u30b1\u30eb\u30c8\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+PreferenceInitializer.69=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+PreferenceInitializer.71=Vili\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+PreferenceInitializer.72=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
