--- a/org.seasar.ymir.eclipse/plugin_ja.properties
+++ b/org.seasar.ymir.eclipse/plugin_ja.properties
@@ -1,2 +1,3 @@
 newWizard.name=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 newWizard.description=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+popup.action.addFragments=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0...
