既存プロジェクトにフラグメントを追加できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2011 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -7,42 +7,48 @@ NewProjectWizard.11=New Ymir Project
 NewProjectWizard.20=Update application properties
 NewProjectWizard.23=Set up classpath
 NewProjectWizard.25=Set up JDK compliance settings
+NewProjectWizard.26=Project skeleton
+NewProjectWizard.27=Specify project skeleton.
+NewProjectWizard.28=Add database dependencies to pom.xml
 NewProjectWizard.2={0} is required.
-NewProjectWizardThirdPage.0=Ymir project settings
-NewProjectWizardThirdPage.1=Project settings
-NewProjectWizardThirdPage.2=Specify project settings.
-NewProjectWizardThirdPage.11=General
-NewProjectWizardThirdPage.12=Skeleton specific
-NewProjectWizardFirstPage.1=Project skeleton
-NewProjectWizardFirstPage.2=Specify project skeleton.
-NewProjectWizardFirstPage.5=Available skeleton templates:
-NewProjectWizardFirstPage.6=Choose a skeleton from the templates
-NewProjectWizardFirstPage.7=Group ID
-NewProjectWizardFirstPage.8=Artifact ID
-NewProjectWizardFirstPage.9=Version
-NewProjectWizardFirstPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
-NewProjectWizardSecondPage.1=Create a Ymir project
-NewProjectWizardSecondPage.2=Create a Ymir project in the workspace or in an external location.
-NewProjectWizardSecondPage.3=Project inforamtion
-NewProjectWizardSecondPage.4=Root package name
-NewProjectWizardSecondPage.5=Group ID
-NewProjectWizardSecondPage.6=Use root package name as group ID
-NewProjectWizardSecondPage.7=Artifact ID
-NewProjectWizardSecondPage.8=Use project name as artifact ID
-NewProjectWizardSecondPage.9=Version
-NewProjectWizardSecondPage.0=JRE Container
-NewProjectWizardFirstPage.10=Use the latest version
+NewProjectWizard.1=Create project
+ConfigureParametersPage.0=Ymir project settings
+ConfigureParametersPage.1=Project settings
+ConfigureParametersPage.2=Specify project settings.
+ConfigureParametersPage.11=General
+ConfigureParametersPage.12=Skeleton specific
+ConfigureParametersPage.13=There is no configurable settings.
+ConfigureProjectPage.1=Create a Ymir project
+ConfigureProjectPage.2=Create a Ymir project in the workspace or in an external location.
+ConfigureProjectPage.3=Project inforamtion
+ConfigureProjectPage.4=Root package name
+ConfigureProjectPage.5=Group ID
+ConfigureProjectPage.6=Use root package name as group ID
+ConfigureProjectPage.7=Artifact ID
+ConfigureProjectPage.8=Use project name as artifact ID
+ConfigureProjectPage.9=Version
+ConfigureProjectPage.0=JRE Container
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
 SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
-NewProjectWizardFirstPage.11=Skeleton
-NewProjectWizardFirstPage.12=Option
-NewProjectWizardFirstPage.13=Can't select this option since corresponding option archive is not found.
-NewProjectWizardFirstPage.14=Custom options to be added:
-NewProjectWizardFirstPage.15=Add
-NewProjectWizardFirstPage.19=Option archive has not been found. Please change condition.
-NewProjectWizardFirstPage.20=Remove
-NewProjectWizardFirstPage.21=Resolve fragment artifact
-NewProjectWizardFirstPage.22=Specified archive is not a Vili fragment.
-NewProjectWizardFirstPage.24=Detail
-NewProjectWizardFirstPage.25=Archives to be used:
-NewProjectWizardFirstPage.27=local
+SelectArtifactPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
+SelectArtifactPage.5=Available skeleton templates:
+SelectArtifactPage.6=Choose a skeleton from the templates
+SelectArtifactPage.7=Group ID
+SelectArtifactPage.8=Artifact ID
+SelectArtifactPage.9=Version
+SelectArtifactPage.10=Use the latest version
+SelectArtifactPage.11=Skeleton
+SelectArtifactPage.12=Option
+SelectArtifactPage.13=Can't select this option since corresponding option archive is not found.
+SelectArtifactPage.14=Custom options to be added:
+SelectArtifactPage.15=Add
+SelectArtifactPage.19=Option archive has not been found. Please change condition.
+SelectArtifactPage.20=Remove
+SelectArtifactPage.21=Resolve fragment artifact
+SelectArtifactPage.22=Specified archive is not a Vili fragment.
+SelectArtifactPage.24=Detail
+SelectArtifactPage.25=Archives to be used:
+SelectArtifactPage.27=local
+AddFeaturesWizard.1=Add fragments
+AddFeaturesWizard.2=Add fragments to the selected project.
+AddFeaturesWizard.3=Add fragments
