--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -7,41 +7,45 @@ NewProjectWizard.11=\u65b0\u898fYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 NewProjectWizard.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizard.26=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
+NewProjectWizard.27=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3068\u306a\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 NewProjectWizard.2={0}\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardThirdPage.0=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a
-NewProjectWizardThirdPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a\u306e\u6307\u5b9a
-NewProjectWizardThirdPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardThirdPage.11=\u5168\u822c
-NewProjectWizardThirdPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
-NewProjectWizardFirstPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u6307\u5b9a
-NewProjectWizardFirstPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u96db\u5f62\u3068\u306a\u308b\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardFirstPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8:
-NewProjectWizardFirstPage.6=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u304b\u3089\u9078\u629e\u3059\u308b
-NewProjectWizardFirstPage.7=\u30b0\u30eb\u30fc\u30d7ID
-NewProjectWizardFirstPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
-NewProjectWizardFirstPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
-NewProjectWizardFirstPage.0=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u30ea\u30dd\u30b8\u30c8\u30ea\u304b\u3089\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059\u3002\uff08\u3053\u306e\u51e6\u7406\u306f\u6642\u9593\u304c\u304b\u304b\u308b\u3053\u3068\u304c\u3042\u308a\u307e\u3059\uff09
-NewProjectWizardSecondPage.1=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
-NewProjectWizardSecondPage.2=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-NewProjectWizardSecondPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u60c5\u5831
-NewProjectWizardSecondPage.4=\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d
-NewProjectWizardSecondPage.5=\u30b0\u30eb\u30fc\u30d7ID
-NewProjectWizardSecondPage.6=\u30b0\u30eb\u30fc\u30d7ID\u3068\u3057\u3066\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d\u3092\u4f7f\u3046
-NewProjectWizardSecondPage.7=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
-NewProjectWizardSecondPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID\u3068\u3057\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u3092\u4f7f\u3046
-NewProjectWizardSecondPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
-NewProjectWizardFirstPage.10=\u6700\u65b0\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b
+ConfigureParametersPage.0=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a
+ConfigureParametersPage.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u8a2d\u5b9a\u306e\u6307\u5b9a
+ConfigureParametersPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e\u8a2d\u5b9a\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+ConfigureParametersPage.11=\u5168\u822c
+ConfigureParametersPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
+ConfigureParametersPage.13=\u8a2d\u5b9a\u53ef\u80fd\u306a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+ConfigureProjectPage.1=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
+ConfigureProjectPage.2=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+ConfigureProjectPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u60c5\u5831
+ConfigureProjectPage.4=\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d
+ConfigureProjectPage.5=\u30b0\u30eb\u30fc\u30d7ID
+ConfigureProjectPage.6=\u30b0\u30eb\u30fc\u30d7ID\u3068\u3057\u3066\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d\u3092\u4f7f\u3046
+ConfigureProjectPage.7=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
+ConfigureProjectPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID\u3068\u3057\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u3092\u4f7f\u3046
+ConfigureProjectPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
 SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 SkeletonArtifactResolver.0=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30b9\u30b1\u30eb\u30c8\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
-NewProjectWizardFirstPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
-NewProjectWizardFirstPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
-NewProjectWizardFirstPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
-NewProjectWizardFirstPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8:
-NewProjectWizardFirstPage.15=\u8ffd\u52a0
-NewProjectWizardFirstPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
-NewProjectWizardFirstPage.20=\u524a\u9664
-NewProjectWizardFirstPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
-NewProjectWizardFirstPage.22=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
-NewProjectWizardFirstPage.24=\u8a73\u7d30
-NewProjectWizardFirstPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
-NewProjectWizardFirstPage.27=\u30ed\u30fc\u30ab\u30eb
+SelectArtifactPage.0=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u3092\u30ea\u30dd\u30b8\u30c8\u30ea\u304b\u3089\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059\u3002\uff08\u3053\u306e\u51e6\u7406\u306f\u6642\u9593\u304c\u304b\u304b\u308b\u3053\u3068\u304c\u3042\u308a\u307e\u3059\uff09
+SelectArtifactPage.5=\u4f7f\u7528\u53ef\u80fd\u306a\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8:
+SelectArtifactPage.6=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u304b\u3089\u9078\u629e\u3059\u308b
+SelectArtifactPage.7=\u30b0\u30eb\u30fc\u30d7ID
+SelectArtifactPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
+SelectArtifactPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
+SelectArtifactPage.10=\u6700\u65b0\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b
+SelectArtifactPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
+SelectArtifactPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
+SelectArtifactPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
+SelectArtifactPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8:
+SelectArtifactPage.15=\u8ffd\u52a0
+SelectArtifactPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
+SelectArtifactPage.20=\u524a\u9664
+SelectArtifactPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
+SelectArtifactPage.22=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+SelectArtifactPage.24=\u8a73\u7d30
+SelectArtifactPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
+SelectArtifactPage.27=\u30ed\u30fc\u30ab\u30eb
+AddFeaturesWizard.1=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306e\u8ffd\u52a0
+AddFeaturesWizard.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+AddFeaturesWizard.3=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
