スケルトン、フラグメントが正しく展開されるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2019 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -19,4 +19,6 @@ PreferenceInitializer.68=Vili skeleton project
 PreferenceInitializer.69=Create a project to develop a Vili project skeleton.
 PreferenceInitializer.71=Vili fragment project
 PreferenceInitializer.72=Create a project to develop a Vili project fragment.
+PreferenceInitializer.74=Vili Web application skeleton project
+PreferenceInitializer.75=Create a project to develop a Vili web application project skeleton.
 TemplatePreferencePage.0=Skeleton template to create new projects.
