yonexフラグメントを追加。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2058 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -21,4 +21,6 @@ PreferenceInitializer.71=Vili fragment project
 PreferenceInitializer.72=Create a project to develop a Vili project fragment.
 PreferenceInitializer.74=Vili Web application skeleton project
 PreferenceInitializer.75=Create a project to develop a Vili web application project skeleton.
+PreferenceInitializer.76=Yonex-based integration test environment
+PreferenceInitializer.77=Add an integration-test environment based on Yonex. The version of Yonex is 0.1-SNAPSHOT.
 TemplatePreferencePage.0=Skeleton template to create new projects.
