--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
@@ -20,4 +20,6 @@ PreferenceInitializer.71=Vili\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30d7\u30ed\u3
 PreferenceInitializer.72=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 PreferenceInitializer.74=Vili Web\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1\u30eb\u30c8\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 PreferenceInitializer.75=Vili\u306eWeb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+PreferenceInitializer.76=\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\uff08Yonex\uff09
+PreferenceInitializer.77=Yonex\u3092\u4f7f\u3063\u305f\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002Yonex\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u306f0.1-SNAPSHOT\u3067\u3059\u3002
 TemplatePreferencePage.0=\u65b0\u898f\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u4f5c\u6210\u306e\u305f\u3081\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u3067\u3059\u3002
