preferencesページやpropertyページでテンプレートを変更した際、 ・前後の空白を無視するようにした。 ・エラーがあった場合ダイアログを表示するようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2088 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -1,7 +1,7 @@
 ViliPreferencePage.0=General settings for Vili:
 ViliPreferencePage.1=Search snapshot repositories for skeleton archives
 ViliPreferencePage.2=Search snapshot repositories for fragment archives
-ViliPreferencePage.3=\u30aa\u30d5\u30e9\u30a4\u30f3
+ViliPreferencePage.3=Offline
 PreferenceInitializer.10=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine. 
 PreferenceInitializer.13=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine, \
   and DBFlute for database accessing.
@@ -24,3 +24,5 @@ PreferenceInitializer.75=Create a project to develop a Vili web application proj
 PreferenceInitializer.76=Yonex-based integration test environment
 PreferenceInitializer.77=Add an integration-test environment based on Yonex. The version of Yonex is 0.1-SNAPSHOT.
 TemplatePreferencePage.0=Skeleton template to create new projects.
+TemplatePreferencePage.1=Error
+TemplatePreferencePage.2=Syntax error has been found in template: 
