--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
@@ -1,6 +1,7 @@
 ViliPreferencePage.0=Vili\u306e\u8a2d\u5b9a:
 ViliPreferencePage.1=\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u691c\u7d22\u306b\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u542b\u3081\u308b
 ViliPreferencePage.2=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u691c\u7d22\u306b\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3092\u542b\u3081\u308b
+ViliPreferencePage.3=\u30aa\u30d5\u30e9\u30a4\u30f3
 PreferenceInitializer.10=\u6a19\u6e96\u306eYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30a8\u30f3\u30b8\u30f3\u306b\u306fFreyja ZPT\u30a8\u30f3\u30b8\u30f3\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
 PreferenceInitializer.13=\u6a19\u6e96\u306eYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u30a8\u30f3\u30b8\u30f3\u306b\u306fFreyja ZPT\u30a8\u30f3\u30b8\u30f3\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002\
   \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u30a2\u30af\u30bb\u30b9\u306b\u306fDBFlute\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
@@ -23,3 +24,5 @@ PreferenceInitializer.75=Vili\u306eWeb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7
 PreferenceInitializer.76=\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\uff08Yonex\uff09
 PreferenceInitializer.77=Yonex\u3092\u4f7f\u3063\u305f\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002Yonex\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u306f0.1-SNAPSHOT\u3067\u3059\u3002
 TemplatePreferencePage.0=\u65b0\u898f\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u4f5c\u6210\u306e\u305f\u3081\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u3067\u3059\u3002
+TemplatePreferencePage.1=\u30a8\u30e9\u30fc
+TemplatePreferencePage.2=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f8\u5f0f\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059: 
