フラグメントの追加ウィザードの大きさを新規Viliプロジェクトウィザードと同じにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2093 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -49,6 +49,6 @@ SelectArtifactPage.22=Specified archive is not a Vili fragment.
 SelectArtifactPage.24=Detail
 SelectArtifactPage.25=Archives to be used:
 SelectArtifactPage.27=local
-AddFeaturesWizard.1=Add fragments
-AddFeaturesWizard.2=Add fragments to the selected project.
-AddFeaturesWizard.3=Add fragments
+AddFragmentsWizard.1=Add fragments
+AddFragmentsWizard.2=Add fragments to the selected project.
+AddFragmentsWizard.3=Add fragments
