--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -46,6 +46,6 @@ SelectArtifactPage.22=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30
 SelectArtifactPage.24=\u8a73\u7d30
 SelectArtifactPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
 SelectArtifactPage.27=\u30ed\u30fc\u30ab\u30eb
-AddFeaturesWizard.1=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306e\u8ffd\u52a0
-AddFeaturesWizard.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-AddFeaturesWizard.3=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
+AddFragmentsWizard.1=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306e\u8ffd\u52a0
+AddFragmentsWizard.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+AddFragmentsWizard.3=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
