文言を若干修正。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2366 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin_ja.properties
+++ b/org.seasar.ymir.eclipse/plugin_ja.properties
@@ -1,6 +1,6 @@
 newWizard.category.name=Vili
 newWizard.name=Vili\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 newWizard.description=Vili\u3092\u4f7f\u3063\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-action.addFragments=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0...
+action.addFragments=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u30fb\u66f4\u65b0...
 action.action=\u30a2\u30af\u30b7\u30e7\u30f3
 action.togglePageAndHtml=Page\u3068HTML\u306e\u5207\u308a\u66ff\u3048
