ViliProjectNatureをプロパティページから設定・解除できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2369 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages_ja.properties
@@ -1,3 +1,3 @@
-ViliPropertyPage.0=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
-ViliPropertyPage.1=\u30a8\u30e9\u30fc
-ViliPropertyPage.2=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f8\u5f0f\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059: 
+TemplatePropertyPage.0=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
+TemplatePropertyPage.1=\u30a8\u30e9\u30fc
+TemplatePropertyPage.2=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f8\u5f0f\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059: 
