--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages.properties
@@ -1,3 +1,3 @@
-ViliPropertyPage.0=Template
-ViliPropertyPage.1=Error
-ViliPropertyPage.2=Syntax error has been found in template: 
+TemplatePropertyPage.0=Template
+TemplatePropertyPage.1=Error
+TemplatePropertyPage.2=Syntax error has been found in template: 
