MavenUtilsのメソッドをProjectBuilderに移動した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2399 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
@@ -1,3 +1,4 @@
+ProjectBuilderImpl.1=Add project metadata to pom.xml
 ProjectBuilderImpl.8=Add fragments to project
 ProjectBuilderImpl.12=Creating Ymir project
 ProjectBuilderImpl.13=Failed to expand application skeleton.
