--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
@@ -1,3 +1,4 @@
+ProjectBuilderImpl.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30e1\u30bf\u30c7\u30fc\u30bf\u3092pom.xml\u306b\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.8=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.12=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.13=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u5c55\u958b\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
