文字列の外部化を行なった。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2400 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages.properties
@@ -1,3 +1,3 @@
-TemplatePropertyPage.0=Template
 TemplatePropertyPage.1=Error
 TemplatePropertyPage.2=Syntax error has been found in template: 
+ViliPropertyPage.0=Vili project
