--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -19,8 +19,10 @@ ConfigureProjectPage.7=Artifact ID
 ConfigureProjectPage.8=Use project name as artifact ID
 ConfigureProjectPage.9=Version
 ConfigureProjectPage.0=JRE Container
-SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
 SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
+SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
+SkeletonArtifactResolver.2=This skeleton is unavailable because the Vili version ({0}) of a fragment which it contains is not the same as the current Vili's version ({1}).  
+SkeletonArtifactResolver.3=This skeleton is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
 SelectArtifactPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
 SelectArtifactPage.5=Available skeleton templates:
 SelectArtifactPage.6=Choose a skeleton from the templates
@@ -40,6 +42,7 @@ SelectArtifactPage.22=Specified archive is not a Vili fragment.
 SelectArtifactPage.24=Detail
 SelectArtifactPage.25=Archives to be used:
 SelectArtifactPage.27=local
+SelectArtifactPage.28=This fragment is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
 AddFragmentsWizard.1=Add fragments
 AddFragmentsWizard.2=Add fragments to the selected project.
 AddFragmentsWizard.3=Add fragments
