--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
@@ -3,9 +3,11 @@ ProjectBuilderImpl.8=Add fragments to project
 ProjectBuilderImpl.12=Creating Ymir project
 ProjectBuilderImpl.13=Failed to expand application skeleton.
 ProjectBuilderImpl.14=Create superclass
+ProjectBuilderImpl.15=Expand skeleton
 ProjectBuilderImpl.18=Can't evaluate template: 
 ProjectBuilderImpl.19=Set up project
 ProjectBuilderImpl.20=Update application properties
+ProjectBuilderImpl.21=Write file
 ProjectBuilderImpl.23=Set up classpath
 ProjectBuilderImpl.25=Set up JDK compliance settings
 ProjectBuilderImpl.28=Add database dependencies to pom.xml
