--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
@@ -3,9 +3,11 @@ ProjectBuilderImpl.8=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b
 ProjectBuilderImpl.12=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.13=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u5c55\u958b\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
 ProjectBuilderImpl.14=Page\u306e\u30b9\u30fc\u30d1\u30fc\u30af\u30e9\u30b9\u3092\u751f\u6210\u3057\u3066\u3044\u307e\u3059...
+ProjectBuilderImpl.15=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u5c55\u958b\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.18=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u8a55\u4fa1\u306b\u5931\u6557\u3057\u307e\u3057\u305f: 
 ProjectBuilderImpl.19=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
+ProjectBuilderImpl.21=\u30d5\u30a1\u30a4\u30eb\u3092\u51fa\u529b\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.28=pom.xml\u306b\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u4f9d\u5b58\u95a2\u4fc2\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
