--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -23,6 +23,14 @@ PreferenceInitializer.74=Vili Web application skeleton project
 PreferenceInitializer.75=Create a project to develop a Vili web application project skeleton.
 PreferenceInitializer.76=Yonex-based integration test environment
 PreferenceInitializer.77=Add an integration-test environment based on Yonex.
+PreferenceInitializer.79=Ymir Standard Project (YSP)
+PreferenceInitializer.80=Create a project standardized by the Ymir Project.
+PreferenceInitializer.93=[YSP] Basic resources
+PreferenceInitializer.94=[Ymir Standard Project] Add basic resources to construct a Ymir standard project.
+PreferenceInitializer.98=[Ymir Standard Project] Add login feature.
+PreferenceInitializer.101=[YSP] Views and logics for CRUD
+PreferenceInitializer.102=[Ymir Standard Project] Add views and logics for CRUD.
+PreferenceInitializer.103=[YSP] Login feature
 TemplatePreferencePage.0=Skeleton template to create new projects.
 TemplatePreferencePage.1=Error
 TemplatePreferencePage.2=Syntax error has been found in template: 
