--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
@@ -23,6 +23,14 @@ PreferenceInitializer.74=Vili Web\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f
 PreferenceInitializer.75=Vili\u306eWeb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 PreferenceInitializer.76=\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\uff08Yonex\uff09
 PreferenceInitializer.77=Yonex\u3092\u4f7f\u3063\u305f\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.79=Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff08YSP\uff09
+PreferenceInitializer.80=The Ymir Project\u3067\u898f\u5b9a\u3057\u3066\u3044\u308b\u6a19\u6e96\u69cb\u6210\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+PreferenceInitializer.93=[YSP] \u57fa\u672c\u30ea\u30bd\u30fc\u30b9
+PreferenceInitializer.94=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u69cb\u7bc9\u3059\u308b\u305f\u3081\u306e\u57fa\u672c\u3068\u306a\u308b\u30ea\u30bd\u30fc\u30b9\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.98=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.101=[YSP] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af
+PreferenceInitializer.102=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.103=[YSP] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd
 TemplatePreferencePage.0=\u65b0\u898f\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u4f5c\u6210\u306e\u305f\u3081\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u3067\u3059\u3002
 TemplatePreferencePage.1=\u30a8\u30e9\u30fc
 TemplatePreferencePage.2=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f8\u5f0f\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059: 
