--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/properties/messages_ja.properties
@@ -1,3 +1,3 @@
-TemplatePropertyPage.0=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
 TemplatePropertyPage.1=\u30a8\u30e9\u30fc
 TemplatePropertyPage.2=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f8\u5f0f\u304c\u9593\u9055\u3063\u3066\u3044\u307e\u3059: 
+ViliPropertyPage.0=Vili\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
