テストの結果判明した不具合を修正した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2405 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -9,6 +9,7 @@ ConfigureParametersPage.2=Specify project settings.
 ConfigureParametersPage.11=General
 ConfigureParametersPage.12=Skeleton specific
 ConfigureParametersPage.13=There is no configurable settings.
+ConfigureParametersPage.14=Start configurators
 ConfigureProjectPage.1=Create a Ymir project
 ConfigureProjectPage.2=Create a Ymir project in the workspace or in an external location.
 ConfigureProjectPage.3=Project inforamtion
