--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -9,6 +9,7 @@ ConfigureParametersPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e
 ConfigureParametersPage.11=\u5168\u822c
 ConfigureParametersPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
 ConfigureParametersPage.13=\u9078\u629e\u3055\u308c\u305f\u30b9\u30b1\u30eb\u30c8\u30f3\u3084\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u56fa\u6709\u306e\u8a2d\u5b9a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+ConfigureParametersPage.14=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306eIConfigurator\u3092\u958b\u59cb\u3057\u3066\u3044\u307e\u3059...
 ConfigureProjectPage.1=Vili\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
 ConfigureProjectPage.2=Vili\u3092\u4f7f\u3063\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 ConfigureProjectPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u60c5\u5831
