既知の問題点を修正した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2491 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -20,7 +20,7 @@ ConfigureProjectPage.7=Artifact ID
 ConfigureProjectPage.8=Use project name as artifact ID
 ConfigureProjectPage.9=Version
 ConfigureProjectPage.0=JRE Container
-SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
+SkeletonArtifactResolver.0=Archive type does not match.
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
 SkeletonArtifactResolver.2=This skeleton is unavailable because the Vili version ({0}) of a fragment which it contains is not the same as the current Vili's version ({1}).  
 SkeletonArtifactResolver.3=This skeleton is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
@@ -32,18 +32,18 @@ SelectArtifactPage.8=Artifact ID
 SelectArtifactPage.9=Version
 SelectArtifactPage.10=Use the latest version
 SelectArtifactPage.11=Skeleton
-SelectArtifactPage.12=Option
-SelectArtifactPage.13=Can't select this option since corresponding option archive is not found.
+SelectArtifactPage.12=Fragment
 SelectArtifactPage.14=Custom options to be added:
 SelectArtifactPage.15=Add
 SelectArtifactPage.19=Option archive has not been found. Please change condition.
 SelectArtifactPage.20=Remove
 SelectArtifactPage.21=Resolve fragment artifact
-SelectArtifactPage.22=Specified archive is not a Vili fragment.
 SelectArtifactPage.24=Detail
 SelectArtifactPage.25=Archives to be used:
 SelectArtifactPage.27=local
 SelectArtifactPage.28=This fragment is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
+SelectArtifactPage.29=Archive type does not match.
+SelectArtifactPage.31=Search matched artifacts
 AddFragmentsWizard.1=Add fragments
 AddFragmentsWizard.2=Add fragments to the selected project.
 AddFragmentsWizard.3=Add fragments
