--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -19,7 +19,7 @@ ConfigureProjectPage.6=\u30b0\u30eb\u30fc\u30d7ID\u3068\u3057\u3066\u30eb\u30fc\
 ConfigureProjectPage.7=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID
 ConfigureProjectPage.8=\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8ID\u3068\u3057\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u3092\u4f7f\u3046
 ConfigureProjectPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
-SkeletonArtifactResolver.0=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30b9\u30b1\u30eb\u30c8\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+SkeletonArtifactResolver.0=\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u30bf\u30a4\u30d7\u304c\u7570\u306a\u3063\u3066\u3044\u307e\u3059\u3002
 SkeletonArtifactResolver.1=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30b9\u30b1\u30eb\u30c8\u30f3\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 SkeletonArtifactResolver.2=\u3053\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u306b\u542b\u307e\u308c\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u304c\u5bfe\u5fdc\u3057\u3066\u3044\u308bVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{0}\uff09\u304c\u3053\u306eVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{1}\uff09\u3068\u4e00\u81f4\u3057\u306a\u3044\u305f\u3081\u5229\u7528\u3067\u304d\u307e\u305b\u3093\uff1a
 SkeletonArtifactResolver.3=\u3053\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u304c\u5bfe\u5fdc\u3057\u3066\u3044\u308bVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{0}\uff09\u304c\u3053\u306eVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{1}\uff09\u3068\u4e00\u81f4\u3057\u306a\u3044\u305f\u3081\u5229\u7528\u3067\u304d\u307e\u305b\u3093\u3002
@@ -32,17 +32,17 @@ SelectArtifactPage.9=\u30d0\u30fc\u30b8\u30e7\u30f3
 SelectArtifactPage.10=\u6700\u65b0\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b
 SelectArtifactPage.11=\u30b9\u30b1\u30eb\u30c8\u30f3
 SelectArtifactPage.12=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8
-SelectArtifactPage.13=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u3089\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306f\u9078\u629e\u3067\u304d\u307e\u305b\u3093\u3002
 SelectArtifactPage.14=\u8ffd\u52a0\u3059\u308b\u30ab\u30b9\u30bf\u30e0\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8:
 SelectArtifactPage.15=\u8ffd\u52a0
 SelectArtifactPage.19=\u6761\u4ef6\u306b\u5408\u81f4\u3059\u308b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30ab\u30a4\u30d6\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u6761\u4ef6\u3092\u898b\u76f4\u3057\u3066\u307f\u3066\u4e0b\u3055\u3044\u3002
 SelectArtifactPage.20=\u524a\u9664
 SelectArtifactPage.21=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
-SelectArtifactPage.22=\u6307\u5b9a\u3055\u308c\u305f\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 SelectArtifactPage.24=\u8a73\u7d30
 SelectArtifactPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
 SelectArtifactPage.27=\u30ed\u30fc\u30ab\u30eb
 SelectArtifactPage.28=\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u304c\u5bfe\u5fdc\u3057\u3066\u3044\u308bVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{0}\uff09\u304c\u3053\u306eVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{1}\uff09\u3068\u4e00\u81f4\u3057\u306a\u3044\u305f\u3081\u5229\u7528\u3067\u304d\u307e\u305b\u3093\u3002
+SelectArtifactPage.29=\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u30bf\u30a4\u30d7\u304c\u7570\u306a\u3063\u3066\u3044\u307e\u3059\u3002
+SelectArtifactPage.31=\u5408\u81f4\u3059\u308b\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u3092\u691c\u7d22\u3057\u3066\u3044\u307e\u3059...
 AddFragmentsWizard.1=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306e\u8ffd\u52a0
 AddFragmentsWizard.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
 AddFragmentsWizard.3=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
