YSP専用フラグメントの説明に「（このフラグメントはYmir標準プロジェクト専用です。）」と追記した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2528 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages_ja.properties
@@ -27,9 +27,9 @@ PreferenceInitializer.79=Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uf
 PreferenceInitializer.80=The Ymir Project\u3067\u898f\u5b9a\u3057\u3066\u3044\u308b\u6a19\u6e96\u69cb\u6210\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 PreferenceInitializer.93=[YSP] \u57fa\u672c\u30ea\u30bd\u30fc\u30b9
 PreferenceInitializer.94=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u69cb\u7bc9\u3059\u308b\u305f\u3081\u306e\u57fa\u672c\u3068\u306a\u308b\u30ea\u30bd\u30fc\u30b9\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.98=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.98=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002\uff08\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306fYmir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5c02\u7528\u3067\u3059\u3002\uff09
 PreferenceInitializer.101=[YSP] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af
-PreferenceInitializer.102=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+PreferenceInitializer.102=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002\uff08\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306fYmir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5c02\u7528\u3067\u3059\u3002\uff09
 PreferenceInitializer.103=[YSP] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd
 TemplatePreferencePage.0=\u65b0\u898f\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u4f5c\u6210\u306e\u305f\u3081\u306e\u30b9\u30b1\u30eb\u30c8\u30f3\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u3067\u3059\u3002
 TemplatePreferencePage.1=\u30a8\u30e9\u30fc
