フラグメントについて、プロジェクト新規作成時に追加可能かどうか識別できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2552 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -42,8 +42,9 @@ SelectArtifactPage.24=Detail
 SelectArtifactPage.25=Archives to be used:
 SelectArtifactPage.27=local
 SelectArtifactPage.28=This fragment is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
-SelectArtifactPage.29=Archive type does not match.
+SelectArtifactPage.29=This archive is not a fragment.
 SelectArtifactPage.31=Search matched artifacts
+SelectArtifactPage.32=This fragment can not be added when creating new project.
 AddFragmentsWizard.1=Add fragments
 AddFragmentsWizard.2=Add fragments to the selected project.
 AddFragmentsWizard.3=Add fragments
