--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -41,8 +41,9 @@ SelectArtifactPage.24=\u8a73\u7d30
 SelectArtifactPage.25=\u4f7f\u7528\u3055\u308c\u308b\u30a2\u30fc\u30ab\u30a4\u30d6:
 SelectArtifactPage.27=\u30ed\u30fc\u30ab\u30eb
 SelectArtifactPage.28=\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u304c\u5bfe\u5fdc\u3057\u3066\u3044\u308bVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{0}\uff09\u304c\u3053\u306eVili\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff08{1}\uff09\u3068\u4e00\u81f4\u3057\u306a\u3044\u305f\u3081\u5229\u7528\u3067\u304d\u307e\u305b\u3093\u3002
-SelectArtifactPage.29=\u30a2\u30fc\u30ab\u30a4\u30d6\u306e\u30bf\u30a4\u30d7\u304c\u7570\u306a\u3063\u3066\u3044\u307e\u3059\u3002
+SelectArtifactPage.29=\u3053\u306e\u30a2\u30fc\u30ab\u30a4\u30d6\u306f\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 SelectArtifactPage.31=\u5408\u81f4\u3059\u308b\u30a2\u30fc\u30c6\u30a3\u30d5\u30a1\u30af\u30c8\u3092\u691c\u7d22\u3057\u3066\u3044\u307e\u3059...
+SelectArtifactPage.32=\u3053\u306E\u30D5\u30E9\u30B0\u30E1\u30F3\u30C8\u306F\u65B0\u898F\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u4F5C\u6210\u6642\u306B\u306F\u8FFD\u52A0\u3067\u304D\u307E\u305B\u3093\u3002
 AddFragmentsWizard.1=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306e\u8ffd\u52a0
 AddFragmentsWizard.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306b\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
 AddFragmentsWizard.3=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
